--- a/templates/login/_login-form.phtml
+++ b/templates/login/_login-form.phtml
@@ -2,15 +2,13 @@
     
     <fieldset>
         <label>Login</label>
-        <input type="email" name="email"/>
+        <input type="email" name="loginEmail"/>
     </fieldset>
     <fieldset>
         <label>Password</label>
-        <input type="password" name="password"/>
+        <input type="password" name="loginPassword"/>
     </fieldset>
-    <fieldset>
-        <input type="hidden" name="formName"/>
-    </fieldset>
-    
+    <input type="hidden" name="formName"/>
+    <input type="submit" value="Se connecter"/>
 
 </form>
