--- a/templates/register/_register-form.phtml
+++ b/templates/register/_register-form.phtml
@@ -20,9 +20,8 @@
         <label>Confirmez votre mot de passe</label>
         <input type="password" name="confirmPassword"/>
     </fieldset>
-    <fieldset>
-        <input type="hidden" name="formName"/>
-    </fieldset>
+    <input type="hidden" name="formName"/>
+    <input type="submit" value="S'enregistrer"/>
     
 
 </form>
