--- a/templates/partials/_header.phtml
+++ b/templates/partials/_header.phtml
@@ -1,9 +1,9 @@
 <header>
     <nav>
         <ul>
-            <li>Pages d'Accueil</li>
-            <li>Connexion</li>
-            <li>Création de compte</li>
+            <li><a href="index.php?route=">Pages d'Accueil</a></li>
+            <li><a href="index.php?route=connexion">Connexion</a></li>
+            <li><a href="index.php?route=creer-un-compte">Création de compte</a></li>
         </ul>
     </nav>
 </header>
